<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/thirdColor"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/iv_register"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/title_register"
            android:alpha="0"
            tools:alpha="100"
            />
        <TextView
            android:id="@+id/title_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/textUsername"
            android:layout_marginBottom="20dp"
            android:text="@string/register"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:alpha="0"
            tools:alpha="100"
            />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/textUsername"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:padding="12dp"
            android:hint="Username"
            android:textColor="@color/black"
            android:textColorHint="@color/placeholderColor"
            android:background="@color/white"
            android:alpha="0"
            tools:alpha="100"
            />


        <com.example.submissionintermediate.customView.EmailCustom
            android:id="@+id/editTextEmailAddress"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textUsername"
            android:layout_marginTop="12dp"
            android:background="@color/white"
            android:textColorHint="@color/placeholderColor"
            android:textColor="@color/black"
            android:padding="12dp"
            android:alpha="0"
            tools:alpha="100"
            />

        <com.example.submissionintermediate.customView.PasswordCustom
            android:id="@+id/editTextPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="12dp"
            android:layout_marginTop="12dp"
            app:layout_constraintBottom_toTopOf="@id/button"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/black"
            android:textColorHint="@color/placeholderColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextEmailAddress"
            android:alpha="0"
            tools:alpha="100"
            />

        <Button
            android:id="@+id/button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/editTextPassword"
            app:layout_constraintBottom_toBottomOf="@id/layout_text"
            android:alpha="0"
            tools:alpha="100"
            android:layout_marginTop="12dp"
            />

        <RelativeLayout
            android:id="@+id/layout_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/button"
            app:layout_constraintBottom_toBottomOf="parent"
            android:alpha="0"
            tools:alpha="100"
            >
            <TextView
                android:id="@+id/tv_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/askRegister"
                android:textSize="15sp"
                />
            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_toEndOf="@id/tv_text1"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                />
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>