<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/thirdColor"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.login.LoginActivity"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/iv_login"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/login"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_login"
            android:alpha="0"
            tools:alpha="100"
            />
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
            android:layout_marginBottom="20dp"
            android:text="@string/login"
            android:textSize="30sp"
            android:textStyle="bold"
            android:alpha="0"
            tools:alpha="100"
            />

        <com.example.submissionintermediate.customView.EmailCustom
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/white"
            android:textColorHint="@color/placeholderColor"
            android:textColor="@color/black"
            android:padding="12dp"
            android:alpha="0"
            tools:alpha="100"
            />

        <com.example.submissionintermediate.customView.PasswordCustom
            android:id="@+id/editTextPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="12dp"
            app:layout_constraintBottom_toTopOf="@id/button"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/black"
            android:textColorHint="@color/placeholderColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextTextEmailAddress"
            android:alpha="0"
            tools:alpha="100"
            />
        <Button
            android:id="@+id/button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/editTextPassword"
            app:layout_constraintBottom_toBottomOf="@id/rl_id"
            android:alpha="0"
            tools:alpha="100"
            android:background="@color/black"
            android:backgroundTint="@color/black"
            />

        <RelativeLayout
            android:id="@+id/rl_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/button"
            app:layout_constraintBottom_toBottomOf="parent"
            android:alpha="0"
            tools:alpha="100"
            >
            <TextView
                android:id="@id/tv_askregister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Belum Punya Akun ?"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_toEndOf="@+id/tv_askregister"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp"/>
            />
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>